css/site.scss
---
---


/*******************************************************/
/* Basics                                              */
/*******************************************************/
body,
html {
  height: 100%;
}


body {
  background-image: url("../../assets/images/dark_camo.png"), 
}

/*******************************************************/
/* For the banner image used at the top                */
/*******************************************************/
.banner-image {
  background-image: url("../../assets/images/banner_image.png");

  /* Set a specific height */
  height: 300px;
  /* Position and center the image to scale nicely on all screens */
  background-position: top;
  background-repeat: no-repeat;
  background-size: cover;
  position: 0;
}

/********************************/
/** Adjustments to containers  **/
/********************************/

.container {
  padding: 15px;
  border-radius: 25px;
}

/*******************************************/
/** Custom colors and font                **/
/*******************************************/

@import url(https://use.fontawesome.com/releases/v5.0.10/css/all.css);
@import url(https://fonts.googleapis.com/css?family=Comfortaa:200,300,400,700);
$headings-font-family:Comfortaa;
@import url(https://fonts.googleapis.com/css?family=Comfortaa:200,300,400,700);
$font-family-base:Comfortaa;

$primary:#303030;
$secondary:#FF550B;
$success:#015668;
$danger:#FF304F;
$info:#0F81C7;
$warning:#0DE2EA;
$light:#e8e8e8;
$dark:#000000;

/*! Import Bootstrap 4 variables */
@import "bootstrap/functions";
@import "bootstrap/variables";
@import "bootstrap/mixins";
$body-bg:$dark;
$link-color: $info;
$link-hover-color:darken($link-color,20%);
$navbar-light-color: $secondary;
$navbar-light-hover-color:$gray-800;
$navbar-light-active-color:darken($secondary,20%);
$navbar-dark-color: $secondary;
$navbar-dark-hover-color:$gray-200;
$navbar-dark-active-color:darken($secondary,20%);

// links in TO&E should be different color
@import "bootstrap/utilities";
.card .btn {
 color: $secondary;

  @include hover-focus {
    color: $secondary;
  }  
}  

@import 'bootstrap/bootstrap';


/* custom container for scenarios */
.container.scenario {
  //padding-top: 5px;
  //padding-bottom: 5px;
  //margin-top: 5px;
  //margin-bottom: 15px;
  border-width: 3px !important;
}

